--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ nav {
 nav a {
     color: #000;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 30px;
     margin: 0 45px;
     text-decoration: none;
     transition: color 0.5s ease;
@@ -38,6 +38,14 @@ nav button.active {
 
 body {
     background-color: #fff;
+}
+
+p {
+    line-height: 1.25;
+}
+
+li {
+    margin-bottom: 15px;
 }
 
 .logo-bar img {
@@ -76,10 +84,6 @@ body {
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     padding: 20px;
     align-items: center;
     text-align: center;
@@ -91,4 +95,39 @@ body {
 
 .address-link:hover {
     cursor: pointer;
+}
+
+.banner {
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+}
+
+.banner-image {
+    width: 100%;
+    height: auto;
+    object-fit: scale-down;
+    object-position: top center;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -75%);
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex-grow: 1;
+}
+
+.blank-space {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+/*Community Service Hours*/
+.community_service_heading_text {
+    text-align: center;
 }
