--- a/styles/styles.css
+++ b/styles/styles.css
@@ -489,4 +489,170 @@ div.rbc-event.rbc-event-selected,
     width: 60px; /* Adjust the width as needed */
 }
 
+/* Media Query for Mobile Devices */
+@media (max-width: 768px) {
 
+    .logo-bar, nav {
+        width: 100%;
+    }
+
+    body {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    main {
+        padding: 0 10px;
+    }
+
+    p, li {
+        font-size: 14px;
+    }
+
+    .content {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    .line {
+        width: 80%;
+    }
+
+    .logo-bar img {
+        width: 40px;
+    }
+
+    .logo-bar {
+        padding-left: 10px;
+        padding-top: 15px;
+    }
+
+    .logo {
+        font-size: 20px;
+    }
+
+    .tagline {
+        font-size: 16px;
+    }
+
+    .dropdown-content {
+        right: 10px;
+        top: 50px;
+    }
+
+    .dropbtn {
+        font-size: 28px;
+    }
+
+    nav {
+        height: 50px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        overflow-x: auto;
+    }
+
+    nav a,
+    nav button {
+        display: inline-block;
+        font-size: 12px;
+        margin: 10px 5px;
+    }
+
+    .banner {
+        height: 100px;
+    }
+
+    .weight-box {
+        height: 15%;
+    }
+
+    .litter-weight {
+        font-size: 18px;
+    }
+
+    .about_content, .memberContainer {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .memberImage {
+        width: 85px;
+        height: 95px;
+    }
+
+    .memberContainer:nth-child(odd) .memberImage {
+        margin-left: 0;
+    }
+
+    .donorbox_container {
+        margin-top: 10px;
+    }
+
+    .legal_donorbox_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image_container {
+        margin: 10px 10px;
+    }
+
+    .image-row__item {
+        width: 90px;
+        height: auto;
+    }
+
+    .donate-image {
+        width: 30%;
+        height: auto;
+        justify-content: left;
+    }
+
+    .contact-container {
+        width: 90%;
+        padding: 20px;
+    }
+
+    .input-container input, .contact-input {
+        max-width: 100%;
+    }
+
+    .input-container textarea, .contact-textarea {
+        max-width: 100%;
+    }
+
+    img {
+        width: 50%;
+        height: auto;
+    }
+
+    .rbc-calendar {
+        display: flex;
+        width: 90%;
+        align-items: center;
+        justify-content: space-around;
+
+    }
+
+    .rbc-toolbar button {
+        font-size: 12px;
+    }
+
+    .rbc-toolbar-label {
+        font-size: 12px;
+    }
+
+    .table td, .table th {
+        padding: 8px;
+    }
+
+    .start-time-column {
+        width: 40px;
+    }
+
+    .privacy_heading_text {
+        text-align: center;
+    }
+}
