--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@ main {
     flex-direction: column;
     min-height: 100vh;
     flex-grow: 1;
+    line-height: 1.5;
 }
 
 body {
@@ -517,10 +518,32 @@ div.rbc-event.rbc-event-selected,
 }
 
 .post-carousel img {
-    max-width: 200px;
-    height: auto;
-    margin: 0 10px;
+    max-width: 400px;
+    height: 300px;
+    object-fit: contain;
+    margin: 30px 30px;
 }
+
+/*Volunteer*/
+.volunteer-heading {
+    text-align: center;
+    color: #015e41;
+}
+
+.volunteer-content {
+    text-align: center;
+    margin-bottom: 30px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.community-service-button {
+    display: block;
+    margin: 0 auto 40px;
+    border-radius: 20px;
+    padding: 10px;
+}
+
 
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
@@ -694,6 +717,41 @@ div.rbc-event.rbc-event-selected,
 
     .privacy_heading_text {
         text-align: center;
+    }
+
+    .volunteer-content {
+        text-align: center;
+        margin-bottom: 30px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .post-grid {
+        display: grid;
+        grid-template-columns: none;
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .post {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    .post-carousel {
+        object-fit: cover;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .post-carousel img {
+        max-width: 100%;
+        height: auto;
+        object-fit: cover;
+        margin: 0 10px;
     }
 
 }
@@ -885,6 +943,40 @@ div.rbc-event.rbc-event-selected,
 
     .footer {
         margin-top: 20px;
+    }
+
+    .volunteer-content {
+        text-align: center;
+        margin-bottom: 30px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .post-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .post {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    .post-carousel {
+        justify-content: center;
+        object-fit: cover;
+    }
+
+    .post-carousel img {
+        max-width: 180%;
+        height: auto;
+        object-fit: cover;
+        margin: 0 10px;
     }
 
 }
