--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,8 @@
 /* styles.css */
+* {
+    margin: 0;
+    padding: 0;
+}
 
 /*General Formatting*/
 main {
@@ -11,20 +15,17 @@ p {
 }
 
 body {
-    background-color: #D3D3D3;
+    background-color: white;
+    width: 100%;
 }
 
 .page {
     padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-
-.blank-space {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    background-color: #D3D3D3;
 }
 
 .content {
@@ -46,11 +47,6 @@ div {
     margin: 0 auto;
     border: none;
     border-top: 1px solid black;
-    padding-bottom: 20px;
-}
-
-.bottom-line {
-    margin-top: 20px;
 }
 
 /*logo bar*/
@@ -73,6 +69,7 @@ div {
     padding-left: 20px;
     padding-top: 30px;
     position: relative;
+    background-color: white;
 }
 
 .logo-bar p {
@@ -114,6 +111,7 @@ nav {
     align-items: center;
     padding-top: 10px;
     padding-bottom: 20px;
+    background-color: white;
 }
 
 nav a {
@@ -208,10 +206,15 @@ nav button.active {
 .heading-text {
     text-align: center;
     color: #015e41;
+    margin-bottom: 20px;
 }
 
 li {
     margin-bottom: 15px;
+}
+
+ol {
+    margin-left: 40px;
 }
 
 /*Directors*/
@@ -291,7 +294,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100vh;
+    height: 80vh;
     padding-top: 20px;
 }
 
@@ -447,40 +450,61 @@ div.rbc-event.rbc-event-selected,
 }
 
 .start-time-column {
-    width: 60px; /* Adjust the width as needed */
+    width: 60px;
+}
+
+/* User Posts */
+.stories-content {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    background-color: #fff;
+    width: 55vw;
+    margin: auto;
 }
 
 .post-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
+    gap: 15px;
+    grid-auto-flow: row;
+    width: 50%;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
 }
 
 .post {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
-    padding: 10px;
+    justify-content: center;
+    border: 2px solid #015e41;
+    border-radius: 25px;
+    width: 20vw; /* roughly half the viewport width */
+    height: 85vh; /* 85% of the viewport height */
+    overflow: hidden;
+    padding: 40px;
 }
 
 .post-carousel {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .post-carousel img {
-    max-width: 400px;
-    height: 300px;
+    width: 80%;
+    height: auto;
     object-fit: contain;
-    margin: 30px 30px;
+    margin-bottom: 8px;
 }
+
 
 /*Volunteer*/
 .community-service-button {
     display: block;
-    margin: 0 auto 40px;
+    margin: 30px auto 40px;
     border-radius: 20px;
     padding: 10px;
 }
@@ -489,6 +513,7 @@ div.rbc-event.rbc-event-selected,
 .footer-columns {
     display: flex;
     justify-content: center;
+    background-color: #D3D3D3;
 }
 
 
@@ -500,7 +525,9 @@ div.rbc-event.rbc-event-selected,
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    align-content: center;
 }
+
 
 .footer-column-2 {
     padding-top: 50px;
@@ -529,17 +556,19 @@ div.rbc-event.rbc-event-selected,
     position: relative;
 }
 
-.footer p {
-    line-height: 0;
-}
-
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
     .page {
         padding-top: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100vw;
     }
 
     p, li, a {
@@ -549,9 +578,8 @@ div.rbc-event.rbc-event-selected,
 
     .content {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        padding: 10px;
         background-color: #fff;
-        width: calc(100% - 20px);
+        width: 80vw;
         margin: auto;
     }
 
@@ -659,7 +687,7 @@ div.rbc-event.rbc-event-selected,
 
     /*Image Row*/
     .image-row__item {
-        width: 90px;
+        width: 130px;
         height: auto;
     }
 
@@ -708,9 +736,6 @@ div.rbc-event.rbc-event-selected,
         width: 40px;
     }
 
-    .privacy_heading_text {
-        text-align: center;
-    }
 
     .post-grid {
         display: grid;
@@ -725,6 +750,8 @@ div.rbc-event.rbc-event-selected,
         align-items: center;
         border: 1px solid black;
         padding: 10px;
+        height: 45vh;
+        width: 45vw;
     }
 
     .post-carousel {
@@ -734,7 +761,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .post-carousel img {
-        max-width: 100%;
+        max-width: 100vw;
         height: auto;
         object-fit: cover;
         margin: 0 10px;
@@ -745,21 +772,25 @@ div.rbc-event.rbc-event-selected,
         font-size: 12px;
     }
 
+    .contact-wrapper {
+        height: 70vh;
+    }
+
 }
 
 
 @media (max-width: 1024px) and (orientation: landscape) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
     .logo-bar, nav {
-        width: 100%;
+        width: 100vw;
     }
 
     body {
-        width: 100%;
         margin: 0 auto;
-    }
-
-    main {
-        padding: 0 10px;
     }
 
     p, li {
@@ -770,10 +801,6 @@ div.rbc-event.rbc-event-selected,
         margin-left: 5px;
         margin-right: 5px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-    }
-
-    .line, .bottom-line {
-        width: 80%;
     }
 
     .logo-bar img {
@@ -850,7 +877,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .image-row__item {
-        width: 150px;
+        width: 130px;
         height: auto;
     }
 
@@ -861,7 +888,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .contact-container {
-        width: 80%;
+        width: 80vw;
         padding: 10px;
     }
 
@@ -874,7 +901,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .contact-wrapper {
-        margin-bottom: 20px;
+        margin-bottom: 65vh;
     }
 
     .input-container input, .contact-input {
@@ -916,10 +943,6 @@ div.rbc-event.rbc-event-selected,
         width: 40px;
     }
 
-    .privacy_heading_text {
-        text-align: center;
-    }
-
     .post-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -933,6 +956,8 @@ div.rbc-event.rbc-event-selected,
         align-items: center;
         border: 1px solid black;
         padding: 10px;
+        width: 20vw;
+        height: 80vh;
     }
 
     .post-carousel {
@@ -941,7 +966,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .post-carousel img {
-        max-width: 180%;
+        max-width: 80vw;
         height: auto;
         object-fit: cover;
         margin: 0 10px;
