--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 /* General Formatting */
@@ -11,12 +10,43 @@ body {
 }
 
 main {
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 p {
     line-height: 1.75;
     font-size: 18px;
+}
+
+li {
+    margin-bottom: 15px;
+}
+
+ol {
+    margin-left: 40px;
+}
+
+button {
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #015e41;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+label {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+form {
+    padding: 10px;
+}
+
+input, select, textarea {
+    margin-bottom: 15px;
 }
 
 .page {
@@ -33,16 +63,12 @@ p {
     background-color: #fff;
     margin-left: auto;
     margin-right: auto;
-    width: 85vw;
-}
-
-div {
-    margin: 0;
-    padding: 0;
+    width: 85%;
 }
 
 h1.heading-text {
-    text-align: center;
+    text-align: start;
+    font-size: 48px;
     color: #015e41;
     margin-bottom: 40px;
 }
@@ -84,17 +110,17 @@ h2.heading-text {
     margin-right: 5px;
 }
 
-.tagline {
-    color: #015e41;
-    font-style: italic;
-    font-size: 18px;
-}
-
 .logo-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 8px;
+}
+
+.tagline {
+    color: #015e41;
+    font-style: italic;
+    font-size: 18px;
 }
 
 /* Nav Bar */
@@ -126,11 +152,11 @@ nav button:hover {
 
 nav button.active {
     color: #479079;
-    padding: 5px;
 }
 
 /* Banner */
 .banner {
+    position: relative;
     background-size: cover;
     background-position: center;
     height: 300px;
@@ -144,10 +170,6 @@ nav button.active {
 
 
 /* Home */
-.banner {
-    position: relative;
-}
-
 .overlay {
     position: absolute;
     top: 0;
@@ -182,19 +204,23 @@ nav button.active {
     color: black;
 }
 
-/* Community Service Hours */
-li {
-    margin-bottom: 15px;
-}
-
-ol {
-    margin-left: 40px;
-}
 
 /* Directors */
 .about_content {
     margin-left: 100px;
     margin-right: 100px;
+}
+
+.about-us-content {
+    margin-bottom: 20px;
+}
+
+.directors-text {
+    margin-left: 100px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .container {
@@ -223,7 +249,7 @@ ol {
     margin-top: 0;
 }
 
-.memberContainer:nth-child(odd) .memberImage {
+.memberContainer:nth-child(even) .memberImage {
     margin-left: 110px;
 }
 
@@ -255,12 +281,12 @@ ol {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 90%;
 }
 
 .contact-container {
-    width: 75vw;
-    height: 70vh;
+    width: 75%;
+    height: 70%;
     border-radius: 10px;
     background: linear-gradient(to bottom, #015e41, #000000);
     color: #fff;
@@ -276,24 +302,6 @@ ol {
     flex-direction: column;
 }
 
-.input-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.input-container label {
-    margin-bottom: 10px;
-}
-
-.input-container input,
-.input-container textarea {
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: none;
-    text-align: left;
-}
-
 .contact-input {
     width: 25em;
     height: 3em;
@@ -305,37 +313,24 @@ ol {
     height: 15em;
 }
 
-button {
-    padding: 20px;
-    border-radius: 5px;
-    border: none;
-    background-color: #015e41;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-}
-
-.contact_button_div {
+.contact-submit-button {
     display: flex;
     justify-content: center;
-    align-items: center;
     padding-top: 20px;
-}
-
-label {
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 /* Image Row */
 .image-row {
     display: flex;
     overflow-x: auto;
-    height: 40vh;
+    height: 30%;
 }
 
 .image-row__item {
     margin: 2px;
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
 }
 
 /* Volunteer Calendar */
@@ -389,13 +384,6 @@ div.rbc-event.rbc-event-selected,
 }
 
 /* User Posts */
-.stories-content {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
-    padding: 30px;
-    background-color: #fff;
-    width: 75vw;
-}
-
 .story-posts {
     display: flex;
     justify-content: space-around;
@@ -405,7 +393,7 @@ div.rbc-event.rbc-event-selected,
     display: grid;
     grid-template-columns: 450px 450px;
     gap: 70px;
-    row-gap: 20px;
+    row-gap: 15px;
     grid-auto-flow: row;
     width: 50%;
     justify-content: center;
@@ -467,7 +455,6 @@ div.rbc-event.rbc-event-selected,
     margin-left: 45px;;
     font-weight: normal;
     font-family: Helvetica, serif;
-
 }
 
 .post-title {
@@ -514,6 +501,8 @@ div.rbc-event.rbc-event-selected,
 }
 
 .footer-columns {
+    padding-top: 10px;
+    padding-bottom: 20px;
     display: flex;
     justify-content: center;
     background-color: #D3D3D3;
@@ -531,7 +520,7 @@ div.rbc-event.rbc-event-selected,
 }
 
 .footer-column-2 {
-    padding-top: 55px;
+    padding-top: 50px;
 }
 
 .footer-links {
@@ -566,11 +555,11 @@ div.rbc-event.rbc-event-selected,
     }
 
     .page {
-        padding: 20px;
+        padding: 10px 0 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100vw;
+        width: 100%;
     }
 
     p,
@@ -580,11 +569,19 @@ div.rbc-event.rbc-event-selected,
         font-size: 12px;
     }
 
+    h1.heading-text {
+        text-align: start;
+        font-size: 30px;
+        color: #015e41;
+        margin-bottom: 40px;
+    }
+
     .content {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         background-color: #fff;
-        width: 80vw;
-        margin: auto;
+        width: 90%;
+        padding: 5px;
+        margin: 0;
     }
 
     .logo-bar,
@@ -617,7 +614,7 @@ div.rbc-event.rbc-event-selected,
     nav button {
         display: inline-block;
         font-size: 12px;
-        margin: 10px 5px;
+        margin: 10px 0;
     }
 
     .banner {
@@ -632,6 +629,18 @@ div.rbc-event.rbc-event-selected,
         font-size: 18px;
     }
 
+    .about-us-content {
+        margin-bottom: 20px;
+    }
+
+    .directors-text {
+        margin-left: 10px;
+        margin-bottom: 20px;
+        margin-top: 30px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
     .memberContainer {
         margin-left: 10px;
         margin-right: 10px;
@@ -642,7 +651,7 @@ div.rbc-event.rbc-event-selected,
         height: 95px;
     }
 
-    .memberContainer:nth-child(odd) .memberImage {
+    .memberContainer:nth-child(even) .memberImage {
         margin-left: 0;
     }
 
@@ -667,20 +676,19 @@ div.rbc-event.rbc-event-selected,
         justify-content: center;
     }
 
-    /* Image Row */
     .contact-container {
-        width: 90%;
-        padding: 20px;
+        width: 100%;
+        padding: 5px;
     }
 
-    .input-container input,
-    .contact-input {
-        max-width: 100%;
+    #firstName,
+    #lastName,
+    #email {
+        width: 60%;
     }
 
-    .input-container textarea,
-    .contact-textarea {
-        max-width: 100%;
+    #message {
+        width: 100%;
     }
 
     .rbc-calendar {
@@ -710,43 +718,93 @@ div.rbc-event.rbc-event-selected,
         width: 40px;
     }
 
+    .story-posts {
+        width: 100%;
+    }
+
     .post-grid {
-        display: grid;
-        grid-template-columns: none;
-        gap: 10px;
-        padding: 10px;
+        display: inline-flex;
+        flex-direction: column;
+        /*gap: 5px;*/
+        padding: 0;
+        width: 100%;
+        height: 80%;
     }
 
     .post {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         border: 1px solid black;
         padding: 10px;
-        height: 45vh;
-        width: 45vw;
+        width: 100%;
+        min-height: unset;
     }
 
     .post-carousel {
         object-fit: cover;
         justify-content: center;
         margin-bottom: 10px;
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .post-carousel img {
-        max-width: 100vw;
+        max-width: 100%;
         height: auto;
         object-fit: cover;
-        margin: 0 10px;
+        margin: auto;
     }
 
+    .post-user-name {
+        margin-left: 5px;;
+        font-weight: normal;
+        font-family: Helvetica, serif;
+    }
+
+    .post-title {
+        margin-top: 20px;
+        margin-left: 5px;
+        font-size: 1.5em;
+        font-weight: bolder;
+    }
+
+    .post-location {
+        margin-top: 20px;
+        margin-left: 5px;
+        font-family: Helvetica, serif;
+        font-size: 15px;
+        color: blue;
+    }
+
+    .post-litter-weight-collected {
+        text-align: center;
+        font-weight: bold;
+        margin-top: 20px;
+        margin-bottom: 8px;
+    }
+
+    .post-description {
+        width: 300px;
+        font-size: 18px;
+        font-family: inherit;
+        margin: 0;
+    }
+
+
     /* Footer */
+    .footer-columns {
+        padding-top: 20px;
+    }
+
+    .footer-column-2 {
+        padding-top: 38px;
+    }
+
     .footer-column-3 a {
         font-size: 12px;
     }
 
     .contact-wrapper {
-        height: 70vh;
+        height: 70%;
     }
 }
 
@@ -760,7 +818,7 @@ div.rbc-event.rbc-event-selected,
 
     .logo-bar,
     nav {
-        width: 100vw;
+        width: 100%;
     }
 
     body {
@@ -773,8 +831,7 @@ div.rbc-event.rbc-event-selected,
     }
 
     .content {
-        margin-left: 5px;
-        margin-right: 5px;
+        margin: auto;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     }
 
@@ -852,7 +909,8 @@ div.rbc-event.rbc-event-selected,
     }
 
     .contact-container {
-        width: 80vw;
+        width: 80%;
+        height: 100%;
         padding: 10px;
     }
 
@@ -865,17 +923,17 @@ div.rbc-event.rbc-event-selected,
     }
 
     .contact-wrapper {
-        margin-bottom: 65vh;
+        margin-bottom: 65%;
     }
 
-    .input-container input,
-    .contact-input {
-        max-width: 100%;
+    #firstName,
+    #lastName,
+    #email {
+        width: 60%;
     }
 
-    .input-container textarea,
-    .contact-textarea {
-        max-width: 100%;
+    #message {
+        width: 100%;
     }
 
     .rbc-calendar {
@@ -905,31 +963,41 @@ div.rbc-event.rbc-event-selected,
     }
 
     .post-grid {
-        display: grid;
+        display: inline-flex;
+        flex-direction: column;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
         padding: 10px;
     }
 
     .post {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         border: 1px solid black;
         padding: 10px;
-        width: 20vw;
-        height: 80vh;
+        width: 100%;
+        min-height: 100px;
     }
 
     .post-carousel {
         justify-content: center;
         object-fit: cover;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .post-carousel img {
-        max-width: 80vw;
+        max-width: 100%;
         height: auto;
-        object-fit: cover;
-        margin: 0 10px;
+        object-fit: fill;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;;
+    }
+
+    .post-description {
+        width: 100%;
+    }
+
+    .footer-columns {
+        padding-top: 30px;
     }
 }
